= {project-name} Changelog
:project-name: Asciidoctor FB2
:project-handle: asciidoctor-fb2
:slug: slonopotamus/{project-handle}
:uri-project: https://github.com/{slug}

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {uri-project}/commits/master[commit history] on GitHub.

== Unreleased

* add support for `kbd` inline macro. https://github.com/slonopotamus/asciidoctor-fb2/issues/13[#13]

== 0.2.0 (2020-11-23) - @slonopotamus

* add support for cover image via `+:front-cover-image:+` attribute. https://github.com/slonopotamus/asciidoctor-fb2/issues/3[#3]
* update fb2rb to 0.3.0
* add support for nested lists. https://github.com/slonopotamus/asciidoctor-fb2/issues/2[#2]
* output uncompressed book if filename doesn't end with `.zip`
* add support for `menu` inline macro. https://github.com/slonopotamus/asciidoctor-fb2/issues/12[#12]

== 0.1.0 (2020-07-24) - @slonopotamus

* initial release